<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/donateFormConstraint"
    style="@style/clStyle">

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/light_purple"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/donateFormConstraint"
            style="@style/cvStyle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/blogConstraint3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/donateText1"
                    android:fontFamily="@font/dmsans_bold"
                    android:text="@string/header_donate_detail"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/ctStyle"/>

                <TextView
                    android:id="@+id/donateBank"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/donate_bank"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/donateText1"
                    style="@style/ctStyle"/>

                <TextView
                    android:id="@+id/donateHolder"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/donate_acc_name"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/donateBank"
                    style="@style/ctStyle" />


                <TextView
                    android:id="@+id/donateAcc"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/donate_acc"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/donateHolder"
                    style="@style/ctStyle"/>

                <TextView
                    android:id="@+id/donateCode"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/donate_code"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/donateAcc"
                    style="@style/ctStyle"/>

                <TextView
                    android:id="@+id/donateCode2"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/donate_code2"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/donateCode"
                    style="@style/ctStyle"/>

                <TextView
                    android:id="@+id/donateRef"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/donate_ref"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/donateCode2"
                    style="@style/ctStyle"/>

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/donate_back"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/donateRef"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>



