<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/nh_300" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/page_login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/dmsans_medium"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/page_register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/dmsans_medium"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/guest_button"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/page_guest"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/dmsans_medium"
        android:textAlignment="center"/>

</LinearLayout>
