<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_welcome"
        android:fontFamily="@font/dmsans_bold"
        android:textColor="@color/darkBlueMain"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="170dp"
        android:padding="10dp"
        android:background="@drawable/edittxt"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/dmsans_regular"
        android:textColor="@color/darkBlueMain"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/edittxt"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:fontFamily="@font/dmsans_regular"
        android:textColor="@color/darkBlueMain"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="290dp"
        android:text="@string/login_showPassword"
        android:fontFamily="@font/dmsans_regular"
        android:textColor="@color/darkBlueMain"
        style="@style/cbStyle"/>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="300dp"
        android:text="Forgot Password?" />

    <Button
        android:id="@+id/login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:text="Login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/dmsans_medium"
        android:textAlignment="center"/>

</RelativeLayout>
