<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/llStyle">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans_bold"
        android:text="@string/text_home"
        android:textColor="@color/darkBlueMain"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/blogConstraint_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/dmsans_regular"
        android:textColor="@color/darkBlueMain"
        android:text="" />

    <TextView
        android:id="@+id/textFact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dmsans_bold"
        android:textSize="18sp"
        android:text="@string/text_fact"
        android:textColor="@color/darkBlueMain"/>

    <TextView
        android:id="@+id/textFactDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/dmsans_regular"
        android:textSize="16sp"
        android:textColor="@color/darkBlueMain"
        android:text="@string/text_fact_desc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView1"
        style="@style/rvStyle"/>

</LinearLayout>