<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blogConstraint"
    style="@style/clStyle">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:cardBackgroundColor="@color/light_purple"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/blogConstraint"
            style="@style/cvStyle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/blogConstraint2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/blogName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/dmsans_bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/darkBlueMain"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/hint_refugee" />

                <TextView
                    android:id="@+id/blogLoc"
                    android:fontFamily="@font/dmsans_medium"
                    android:hint="@string/hint_location"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/blogName"
                    style="@style/ctStyle"/>

                <ImageView
                    android:id="@+id/imageBlog"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/blogLoc"
                    tools:srcCompat="@tools:sample/avatars" />



                <TextView
                    android:id="@+id/blogStory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/dmsans_regular"
                    android:hint="@string/hint_desc"
                    android:textColor="@color/darkBlueMain"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageBlog" />

                <Button
                    android:id="@+id/btnDonate"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/text_donate"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/blogStory" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>